[package]
name = "ekiden-worker"
version = "0.2.0-alpha"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]
description = "Ekiden worker process"
keywords = ["ekiden"]
repository = "https://github.com/oasislabs/ekiden"
build = "build.rs"

[features]
default = ["testing"]
testing = []

[dependencies]
ekiden-worker-api = { path = "./api", version = "0.2.0-alpha" }
ekiden-core = { path = "../core/common", version = "0.2.0-alpha" }
ekiden-di = { path = "../di", version = "0.2.0-alpha" }
ekiden-instrumentation = { path = "../instrumentation", version = "0.2.0-alpha" }
ekiden-instrumentation-prometheus = { path = "../instrumentation/prometheus", version = "0.2.0-alpha" }
ekiden-tracing = { path = "../tracing", version = "0.2.0-alpha" }
ekiden-untrusted = { path = "../core/untrusted", version = "0.2.0-alpha" }
ekiden-storage-api = { path = "../storage/api", version = "0.2.0-alpha" }
ekiden-roothash-base = { path = "../roothash/base", version = "0.2.0-alpha" }
ekiden-storage-base = { path = "../storage/base", version = "0.2.0-alpha" }
ekiden-storage-batch = { path = "../storage/batch", version = "0.2.0-alpha" }
ekiden-storage-multilayer = { path = "../storage/multilayer", version = "0.2.0-alpha" }
ekiden-storage-persistent = { path = "../storage/persistent", version = "0.2.0-alpha" }
protobuf = "~2.0"
rustracing = "0.1.7"
rustracing_jaeger = { git = "https://github.com/oasislabs/rustracing_jaeger.git", tag = "0.1.7-ekiden1" }
sgx_types = { git = "https://github.com/oasislabs/rust-sgx-sdk", tag = "v1.0.1-ekiden3" }
thread_local = "0.3.5"
clap = "2.29.1"
log = "0.4"
pretty_env_logger = "0.2"
serde_cbor = { git = "https://github.com/oasislabs/cbor", tag = "v0.9.0-ekiden1" }
tokio-uds = "0.2.3"

[build-dependencies]
ekiden-tools = { path = "../tools", version = "0.2.0-alpha" }
ekiden-edl = { path = "../core/edl", version = "0.2.0-alpha" }

[[bin]]
name = "ekiden-worker"
path ="bin/main.rs"
