[package]
name = "ekiden-beacon-api"
version = "0.2.0-alpha"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]
description = "Ekiden beacon API"
keywords = ["ekiden"]
repository = "https://github.com/oasislabs/ekiden"
build = "build.rs"

[dependencies]
protobuf = "~2.0"
grpcio = { git = "https://github.com/ekiden/grpc-rs", tag = "v0.3.0-ekiden1", features = ["openssl"] }
futures = "0.1"

[build-dependencies]
ekiden-tools = { path = "../../tools", version = "0.2.0-alpha" }
protoc-grpcio = "0.2.0"
