[package]
name = "ekiden-beacon-base"
version = "0.1.0"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]
description = "Ekiden random beacon interface traits"
keywords = ["ekiden"]
repository = "https://github.com/oasislabs/ekiden"

[dependencies]
ekiden-beacon-api = { path = "../api", version = "0.1.0" }
ekiden-common = { path = "../../common", version = "0.1.0" }
grpcio = "0.2.2"
