[package]
name = "ekiden-beacon-base"
version = "0.2.0-alpha"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]
description = "Ekiden random beacon interface traits"
keywords = ["ekiden"]
repository = "https://github.com/oasislabs/ekiden"

[dependencies]
ekiden-beacon-api = { path = "../api", version = "0.2.0-alpha" }
ekiden-common = { path = "../../common", version = "0.2.0-alpha" }
ekiden-epochtime = { path = "../../epochtime", version = "0.2.0-alpha" }
ekiden-grpcio = { version = "0.3.2", features = ["openssl"] }
