[package]
name = "ekiden-beacon-dummy"
version = "0.1.0"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]
description = "Ekiden dummy random beacon"
keywords = ["ekiden"]
repository = "https://github.com/oasislabs/ekiden"

[dependencies]
byteorder = "1.2.1"
ekiden-common = { path = "../../common", version = "0.1.0" }
ekiden-beacon-base = { path = "../base", version = "0.1.0" }
log = "0.4"

[dev-dependencies]
rustc-hex = "1.0"
