[package]
name = "ekiden-beacon-dummy"
version = "0.2.0-alpha"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]
description = "Ekiden dummy random beacon"
keywords = ["ekiden"]
repository = "https://github.com/oasislabs/ekiden"

[dependencies]
byteorder = "1.2.1"
ekiden-common = { path = "../../common", version = "0.2.0-alpha" }
ekiden-di = { path = "../../di", version = "0.2.0-alpha" }
ekiden-epochtime = { path = "../../epochtime", version = "0.2.0-alpha" }
ekiden-beacon-base = { path = "../base", version = "0.2.0-alpha" }
log = "0.4"

[dev-dependencies]
rustc-hex = "1.0"
ekiden-grpcio = { version = "0.3.2", features = ["openssl"] }
