[package]
name = "benchmark-client"
version = "0.2.0-alpha"
authors = ["Oasis Labs Inc. <info@oasislabs.com>"]

[dependencies]
client-utils = { path = "../utils", features = ["benchmark"] }
ekiden-core = { path = "../../core/common" }
ekiden-contract-client = { path = "../../contract/client" }
ekiden-rpc-client = { path = "../../rpc/client" }
token-api = { path = "../../contracts/token/api" }
clap = "2.29.1"
rand = "0.4"
