[package]
name = "client-utils"
version = "0.2.0-alpha"
authors = [
    "Nick Hynes <nhynes@berkeley.edu>",
    "Jernej Kos <jernej@kos.mx>"
]

[features]
benchmark = ["threadpool", "time", "histogram"]

[dependencies]
clap = { version = "2.29.1" }
threadpool = { version = "1.7.1", optional = true }
time = { version = "0.1", optional = true }
histogram = { version = "0.6.8", optional = true }
ekiden-grpcio = { version = "0.3.2", features = ["openssl"] }
ekiden-roothash-base = { path = "../../roothash/base", version = "0.2.0-alpha" }
ekiden-roothash-client = { path = "../../roothash/client", version = "0.2.0-alpha" }
ekiden-core = { path = "../../core/common", version = "0.2.0-alpha" }
ekiden-db-trusted = { path = "../../db/trusted", version = "0.2.0-alpha" }
ekiden-di = { path = "../../di", version = "0.2.0-alpha" }
ekiden-epochtime = { path = "../../epochtime", version = "0.2.0-alpha" }
ekiden-instrumentation = { path = "../../instrumentation", version = "0.2.0-alpha" }
ekiden-instrumentation-prometheus = { path = "../../instrumentation/prometheus", version = "0.2.0-alpha" }
ekiden-scheduler-base = { path = "../../scheduler/base", version = "0.2.0-alpha" }
ekiden-scheduler-client = { path = "../../scheduler/client", version = "0.2.0-alpha" }
ekiden-storage-base = { path = "../../storage/base", version = "0.2.0-alpha" }
ekiden-storage-frontend = { path = "../../storage/frontend", version = "0.2.0-alpha" }
ekiden-storage-multilayer = { path = "../../storage/multilayer", version = "0.2.0-alpha" }
ekiden-registry-base = { path = "../../registry/base", version = "0.2.0-alpha" }
ekiden-registry-client = { path = "../../registry/client", version = "0.2.0-alpha" }
ekiden-rpc-client = { path = "../../rpc/client", version = "0.2.0-alpha" }
pretty_env_logger = "0.2"
log = "0.4"
serde = "1.0.71"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
ekiden-storage-dummy = { path = "../../storage/dummy", version = "0.2.0-alpha" }
